# nested_foam

./: .gitignore  README.md  changes.md  main.py  requirements.txt  setup.cfg
ui_app/: __init__.py  backend.py  base_ui.py  file_input_ui.py  key_maker_ui.py  main_ui.py  raw_input_ui.py  test_backend.py
ui_app/uis/: file_input_widget.ui  key_maker_widget.ui  raw_input_widget.ui  ui.ui
