[metadata]
name = nested_foam
version = 0.2
author = ToorajJahangiri
author_email = Toorajjahangiri@gmail.com
license = MIT
url = https://github.com/Class-Tooraj/nested_foam
description = Data Cipher - Encrypt & Decrypt + Encode & Decode.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.7.*

[options.packages.find]
exclude =
    test*
    testing*
